# openmpi-superbuild

./: .code-workspace  CMakeLists.txt  README.md  build.sh  dev.sh  versions.cmake
.buildkite/: build.sh  pipeline.yml
.devcontainer/: Dockerfile  devcontainer.json
container/: README.txt  dev.sh
container/amzn2/: Dockerfile  enable_gcc  enable_intel  intel.repo
projects/: awsofinccl.cmake  gdrcopy.cmake  libfabric.cmake  nccl.cmake  openmpi.bundle.cmake  openmpi.cmake  psm2.cmake  ucx.cmake
superbuild/: CMakeLists.txt
superbuild/cmake/: SuperbuildExternalProject.cmake  SuperbuildInstallMacros.cmake  SuperbuildMacros.cmake  SuperbuildPackageMacros.cmake  SuperbuildRevisionMacros.cmake  SuperbuildTestingMacros.cmake  SuperbuildUtils-apple.cmake  SuperbuildUtils.cmake  SuperbuildVersionMacros.cmake  superbuild_package_cmakelists.cmake.in
